5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1756_1183.log
== SUBMITION (2019-05-28 20:55:32) 
-- CODE:
from numpy import *
v=array(eval(input("vetor dos inteiros :")))
i=0
j=0
while (i < size(v)) :
	if (v[i] >0) :
		j=j + i
	i=i + 1
	
i=0
a=zeros(j, dytpe=int)
j=0

while(j < size(a)):
	if(v[i] >= 0):
		a[j]=v[i]
	else:
		while(v[i] < 0):
			i=i+1
			a[j]=v[i]
		i=i+1
		j-j+1
print(a)
-- EXECUTION TIME:
0.525231
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1183/main.py", line 11, in <module>
    a=zeros(j, dytpe=int)
TypeError: 'dytpe' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:55:33) 
-- CODE:
from numpy import *
v=array(eval(input("vetor dos inteiros :")))
i=0
j=0
while (i < size(v)) :
	if (v[i] >0) :
		j=j + i
	i=i + 1
	
i=0
a=zeros(j, dytpe=int)
j=0

while(j < size(a)):
	if(v[i] >= 0):
		a[j]=v[i]
	else:
		while(v[i] < 0):
			i=i+1
			a[j]=v[i]
		i=i+1
		j-j+1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:55:58) 
-- CODE:
from numpy import *
v=array(eval(input("vetor dos inteiros :")))
i=0
j=0
while (i < size(v)) :
	if (v[i] >0) :
		j=j + i
	i=i + 1
	
i=0
a=zeros(j, dytpe=int)
j=0

while(j < size(a)):
	if(v[i] >= 0):
		a[j]=v[i]
	else:
		while(v[i] < 0):
			i=i+1
		a[j]=v[i]
	i=i+1
	j-j+1
print(a)
-- EXECUTION TIME:
0.483302
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1183/main.py", line 11, in <module>
    a=zeros(j, dytpe=int)
TypeError: 'dytpe' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:55:58) 
-- CODE:
from numpy import *
v=array(eval(input("vetor dos inteiros :")))
i=0
j=0
while (i < size(v)) :
	if (v[i] >0) :
		j=j + i
	i=i + 1
	
i=0
a=zeros(j, dytpe=int)
j=0

while(j < size(a)):
	if(v[i] >= 0):
		a[j]=v[i]
	else:
		while(v[i] < 0):
			i=i+1
		a[j]=v[i]
	i=i+1
	j-j+1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:56:12) 
-- CODE:
from numpy import *
v=array(eval(input("vetor dos inteiros :")))
i=0
j=0
while (i < size(v)) :
	if (v[i] >0) :
		j=j + i
	i=i + 1
	
i=0
a=zeros(j, dtype=int)
j=0

while(j < size(a)):
	if(v[i] >= 0):
		a[j]=v[i]
	else:
		while(v[i] < 0):
			i=i+1
		a[j]=v[i]
	i=i+1
	j-j+1
print(a)
-- EXECUTION TIME:
0.352217
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1183/main.py", line 15, in <module>
    if(v[i] >= 0):
IndexError: index 11 is out of bounds for axis 0 with size 11

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:56:36) 
-- CODE:
from numpy import *
v=array(eval(input("vetor dos inteiros :")))
i=0
j=0
while (i < size(v)) :
	if (v[i] >0) :
		j=j + i
	i=i + 1
	
i=0
a=zeros(j, dtype=int)
j=0

while(j < size(a)):
	if(v[i] >= 0):
		a[j]=v[i]
	else:
		while(v[i] < 0):
			i=i+1
		a[j]=v[i]
	i=i+1
	j=j+1
print(a)
-- EXECUTION TIME:
0.433649
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1183/main.py", line 15, in <module>
    if(v[i] >= 0):
IndexError: index 11 is out of bounds for axis 0 with size 11

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:57:13) 
-- CODE:
from numpy import *
v=array(eval(input("vetor dos inteiros :")))
i=0
j=0
while (i < size(v)) :
	if (v[i] >0) :
		j=j + i
	i=i + 1
	
i=0
a=zeros(j, dtype=int)
j=0

while(j < size(a)):
	if(v[i] >= 0):
		a[j]=v[i]
	else:
		while(v[i] < 0):
			i=i+1
		a[j]=v[i]
	i=i+1
	j=j+1
print(a)
-- EXECUTION TIME:
0.336228
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1183/main.py", line 15, in <module>
    if(v[i] >= 0):
IndexError: index 11 is out of bounds for axis 0 with size 11

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:57:14) 
-- CODE:
from numpy import *
v=array(eval(input("vetor dos inteiros :")))
i=0
j=0
while (i < size(v)) :
	if (v[i] >0) :
		j=j + i
	i=i + 1
	
i=0
a=zeros(j, dtype=int)
j=0

while(j < size(a)):
	if(v[i] >= 0):
		a[j]=v[i]
	else:
		while(v[i] < 0):
			i=i+1
		a[j]=v[i]
	i=i+1
	j=j+1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:57:15) 
-- CODE:
from numpy import *
v=array(eval(input("vetor dos inteiros :")))
i=0
j=0
while (i < size(v)) :
	if (v[i] >0) :
		j=j + i
	i=i + 1
	
i=0
a=zeros(j, dtype=int)
j=0

while(j < size(a)):
	if(v[i] >= 0):
		a[j]=v[i]
	else:
		while(v[i] < 0):
			i=i+1
		a[j]=v[i]
	i=i+1
	j=j+1
print(a)
-- EXECUTION TIME:
0.27808
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1183/main.py", line 15, in <module>
    if(v[i] >= 0):
IndexError: index 11 is out of bounds for axis 0 with size 11

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:05:48) 
-- CODE:
from numpy import *
v= array(eval(input("elementos inteiros :")))
i=0
t=[]

while (i < size(v)):
	if(v[i] >= 0):
		t.append(v[i])
	i=i+1
	
print(str(t).replace(',',','))
-- EXECUTION TIME:
0.36371
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2, 3, 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18, 32, 14, 25]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:05:53) 
-- CODE:
from numpy import *
v= array(eval(input("elementos inteiros :")))
i=0
t=[]

while (i < size(v)):
	if(v[i] >= 0):
		t.append(v[i])
	i=i+1
	
print(str(t).replace(',',',''))
-- EXECUTION TIME:
0.146097
-- ERROR:
  File "/home/codebench/codes/1756/1183/main.py", line 11
    print(str(t).replace(',',',''))
                                  ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:06:04) 
-- CODE:
from numpy import *
v= array(eval(input("elementos inteiros :")))
i=0
t=[]

while (i < size(v)):
	if(v[i] >= 0):
		t.append(v[i])
	i=i+1
	
print(str(t).replace(",",","))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:06:08) 
-- CODE:
from numpy import *
v= array(eval(input("elementos inteiros :")))
i=0
t=[]

while (i < size(v)):
	if(v[i] >= 0):
		t.append(v[i])
	i=i+1
	
print(str(t).replace(",",","))
-- EXECUTION TIME:
0.540987
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2, 3, 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18, 32, 14, 25]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:06:44) 
-- CODE:
from numpy import *
v=array(eval(input("elementos inteiros :")))
i=0
t=[]

while (i < size(v)):
	if(v[i] >= 0):
		t.append(v[i])
	i=i+1
	
print(str(t).replace(",",","))
-- EXECUTION TIME:
0.584595
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2, 3, 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18, 32, 14, 25]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:07:05) 
-- CODE:
from numpy import *
v = array(eval(input("elementos inteiros :")))
i = 0
t = []

while (i < size(v)):
	if (v[i] >= 0):
		t.append(v[i])
	i = i+1
	
print(str(t).replace(",",","))
-- EXECUTION TIME:
0.377545
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2, 3, 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18, 32, 14, 25]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:07:07) 
-- CODE:
from numpy import *
v = array(eval(input("elementos inteiros :")))
i = 0
t = []

while (i < size(v)):
	if (v[i] >= 0):
		t.append(v[i])
	i = i+1
	
print(str(t).replace(",",","))
-- EXECUTION TIME:
0.461128
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2, 3, 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18, 32, 14, 25]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:07:27) 
-- CODE:
from numpy import *
v = array(eval(input("elementos inteiros :")))
i = 0
t = []

while (i < size(v)):
	if (v[i] >= 0):
		t.append(v[i])
	i = i+1
	
print(str(t).replace(",",","))
-- EXECUTION TIME:
0.387646
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2, 3, 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18, 32, 14, 25]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:07:29) 
-- CODE:
from numpy import *

v = array(eval(input("elementos inteiros :")))
i = 0
t = []

while (i < size(v)):
	if (v[i] >= 0):
		t.append(v[i])
	i = i+1
	
print(str(t).replace(",",","))
-- EXECUTION TIME:
0.623648
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2, 3, 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18, 32, 14, 25]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:08:38) 
-- CODE:
from numpy import *

v = array(eval(input("elementos inteiros :")))
i = 0
t = 0

while (i < size(v)):
	if (v[i] > 0):
		j=j+1
	i = i+1
	
i=0
a=zeros(j, dtype=int)
j=0

while(j < size(a)):
	if(v[i] >= 0):
		a[j]=v[i]
	i=j+1
	j=j+1
print(a)
-- EXECUTION TIME:
0.38659
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1183/main.py", line 9, in <module>
    j=j+1
NameError: name 'j' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:10:49) 
-- CODE:
from numpy import *

v = array(eval(input("elementos inteiros :")))
i = 0
t = 0

while (i < size(v)):
	if (v[i] > 0):
		j=j+1
	i = i+1
	
i=0
a=zeros(j, dtype=int)
j=0

while(j < size(a)):
	if(v[i] >= 0):
		a[j]=v[i]
	else :
		while(v[i] < 0):
			i=i+1
		a[j]=v[i]
	i=j+1
	j=j+1
print(a)
-- EXECUTION TIME:
0.540656
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1183/main.py", line 9, in <module>
    j=j+1
NameError: name 'j' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:10:49) 
-- CODE:
from numpy import *

v = array(eval(input("elementos inteiros :")))
i = 0
t = 0

while (i < size(v)):
	if (v[i] > 0):
		j=j+1
	i = i+1
	
i=0
a=zeros(j, dtype=int)
j=0

while(j < size(a)):
	if(v[i] >= 0):
		a[j]=v[i]
	else :
		while(v[i] < 0):
			i=i+1
		a[j]=v[i]
	i=j+1
	j=j+1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:11:15) 
-- CODE:
from numpy import *

v = array(eval(input("elementos inteiros :")))
i = 0
t = 0

while (i < size(v)):
	if (v[i] > 0):
		j=j+1
	i = i+1
	
i=0
a=zeros(j, dtype=int)
j=0

while(j < size(a)):
	if(v[i] >= 0):
		a[j]=v[i]
	else :
		while(v[i] < 0):
			i=i+1
		a[j]=v[i]
	i=i+1
	j=j+1
print(a)
-- EXECUTION TIME:
0.358406
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1183/main.py", line 9, in <module>
    j=j+1
NameError: name 'j' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:16:54) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
0.40782
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:18:45) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
0.209961
-- ERROR:
  File "/home/codebench/codes/1756/1183/main.py", line 7
    if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:18:47) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
0.139519
-- ERROR:
  File "/home/codebench/codes/1756/1183/main.py", line 7
    if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:21:17) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
0.147497
-- ERROR:
  File "/home/codebench/codes/1756/1183/main.py", line 7
    if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:21:18) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
0.127456
-- ERROR:
  File "/home/codebench/codes/1756/1183/main.py", line 7
    if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:21:19) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- ERROR:
File "XXXX", line 7
    if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:21:20) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
0.125579
-- ERROR:
  File "/home/codebench/codes/1756/1183/main.py", line 7
    if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:21:20) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- ERROR:
File "XXXX", line 7
    if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:21:26) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:21:28) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
0.453009
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
